src/objects/ACED_Providers__c.object
<CustomObject>
    <fields>
        <fullName>Affilliate__c</fullName>
        <inlineHelpText>This is a helptext for Affilliate</inlineHelpText>
        <label>Affilliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Provider</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Affilliate__c</columns>
        <columns>HUB__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_Providers</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affilliate__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
        </filters>
        <label>My HUB Providers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Providers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Provider_Affiliate_is_Required</fullName>
        <active>true</active>
        <description>Provider affiliate field on Provider record is mandatory</description>
        <errorConditionFormula>ISPICKVAL(Affilliate__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Affilliate__c</errorDisplayField>
        <errorMessage>Please enter the field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Provider_Hub_Matching</fullName>
        <active>true</active>
        <description>User can only select Provider Hub to which he/she belongs.</description>
        <errorConditionFormula>AND((TEXT($User.ACED_HUB__c)&lt;&gt;&apos;ACE HUB&apos;),IF(TEXT(HUB__c)&lt;&gt; TEXT($User.ACED_HUB__c),TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>HUB__c</errorDisplayField>
        <errorMessage>You cannot select Hub which you are not part of as your base HUB is not &apos;ACE&apos;.</errorMessage>
    </validationRules>
</CustomObject>